# Costpulse

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
costpulse/: __init__.py  version.py
costpulse/api/: __init__.py  deps.py  main.py
costpulse/api/routes/: alerts.py  allocations.py  clusters.py  costs.py  dashboard.py  forecasts.py  recommendations.py  reports.py  tags.py  teams.py  workspaces.py
costpulse/cli/: __init__.py  main.py
costpulse/collectors/: __init__.py  base.py  cluster_collector.py  job_collector.py  system_tables.py  user_collector.py  warehouse_collector.py
costpulse/core/: __init__.py  config.py  constants.py  exceptions.py
costpulse/models/: __init__.py  alert.py  allocation.py  base.py  cluster.py  cost_record.py  forecast.py  job.py  recommendation.py  report.py  team.py  workspace.py
costpulse/processors/: __init__.py  cost_calculator.py
costpulse/schedulers/: __init__.py  collector_scheduler.py
costpulse/services/: __init__.py  alert_service.py  anomaly_detection.py  cost_allocation.py  forecast_service.py  recommendation_service.py  report_service.py  tag_compliance.py
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  getting-started.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BreakdownChart.tsx  CostTrendChart.tsx  StatCard.tsx
frontend/src/pages/: AlertsPage.tsx  ClustersPage.tsx  CostsPage.tsx  Dashboard.tsx  ForecastPage.tsx  RecommendationsPage.tsx  ReportsPage.tsx  TeamsPage.tsx
frontend/src/types/: index.ts
tests/: conftest.py
tests/unit/: test_api.py  test_collectors.py  test_constants.py  test_cost_calculator.py  test_models.py  test_services.py
