[tool.poetry]
name = "costpulse"
version = "0.1.0"
description = "Real-time Databricks cost intelligence platform"
authors = ["Vrahad Analytics <contact@vrahad.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/vrahad-analytics/costpulse"
repository = "https://github.com/vrahad-analytics/costpulse"
keywords = ["databricks", "cost-optimization", "finops", "data-engineering"]

[tool.poetry.scripts]
costpulse = "costpulse.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
databricks-sdk = "^0.20.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = "^5.0.0"
click = "^8.1.0"
rich = "^13.7.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
pandas = "^2.1.0"
numpy = "^1.26.0"
prophet = "^1.1.5"
scikit-learn = "^1.4.0"
slack-sdk = "^3.26.0"
prometheus-client = "^0.19.0"
structlog = "^24.1.0"
croniter = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
