[tool.poetry]
name = "costpulse"
version = "0.2.0"
description = "FinOps-in-a-box platform for Databricks — cost visibility, attribution, and optimization"
authors = ["Vrahad Analytics <contact@vrahad.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/vrahad-analytics/costpulse"
repository = "https://github.com/vrahad-analytics/costpulse"
keywords = ["databricks", "cost-optimization", "finops", "data-engineering", "chargeback", "showback"]

[tool.poetry.scripts]
costpulse = "costpulse.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
databricks-sdk = ">=0.20.0"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
sqlalchemy = ">=2.0.0"
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"
redis = ">=5.0.0"
click = ">=8.1.0"
rich = ">=13.7.0"
httpx = ">=0.26.0"
python-dotenv = ">=1.0.0"
structlog = ">=24.1.0"
numpy = ">=1.26.0"
# Optional heavy dependencies
pandas = {version = ">=2.1.0", optional = true}
prophet = {version = ">=1.1.5", optional = true}
scikit-learn = {version = ">=1.4.0", optional = true}
slack-sdk = {version = ">=3.26.0", optional = true}

[tool.poetry.extras]
ml = ["pandas", "prophet", "scikit-learn"]
notifications = ["slack-sdk"]
all = ["pandas", "prophet", "scikit-learn", "slack-sdk"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
black = ">=24.1.0"
ruff = ">=0.4.0"
mypy = ">=1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
